--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,10 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
-    font-family: var(--ff-sans-normal);
-    font-size: var(--fs-400);
-    color: hsl(var(--clr-white));
-    background-color: hsl(var(--clr-dark));
+    font-family: var(--ff-sans);
     line-height: 1.5;
     min-height: 100vh;
     text-rendering: optimizeSpeed;
-
     overflow-x: hidden;
     display: grid;
     grid-template-rows: min-content 1fr;
@@ -113,45 +109,11 @@ select {
     --clr-dark-grey: #5B636D;
     --clr-light-grey: #A7AAAD;
 
-    /* font-sizes */
-    /* 16px = 1rem */
-
-    --fs-900: clamp(2.5rem, 1.786rem + 1.905vw, 3.5rem);
-    --fs-800: 3.5rem;
-    --fs-700: 1.5rem;
-    --fs-600: 1rem;
-    --fs-500: 1rem;
-    --fs-400: 0.9375rem;
-    --fs-300: 1rem;
-    --fs-200: 0.875rem;
-
     /* font-families */
 
     --ff-serif: 'Fraunces', serif;
-    --ff-sans-normal: "Barlow", sans-serif;
+    --ff-sans: "Barlow", sans-serif;
 }
-
-@media (min-width: 35em) {
-    :root {
-        --fs-800: 5rem;
-        --fs-700: 2.5rem;
-        --fs-500: 1.25rem;
-        --fs-600: 1.5rem;
-        --fs-400: 1rem;
-    }
-}
-
-@media (min-width: 45em) {
-    :root {
-        /* font-sizes */
-        --fs-800: 6.25rem;
-        --fs-700: 3.5rem;
-        --fs-500: 1.75rem;
-        --fs-600: 2rem;
-        --fs-400: 1.125rem;
-    }
-}
-
 
 /* ----------------------------------------------------------- */
 /* UTILITY CLASSES                                             */
@@ -161,30 +123,10 @@ select {
 
 .flex {
     display: flex;
-    gap: var(--gap, 1rem);
 }
 
 .grid {
     display: grid;
-    gap: var(--gap, 1rem);
-}
-
-.d-block {
-    display: block;
-}
-
-.flow>*+* {
-    margin-top: var(--flow-space, 1rem);
-}
-
-.flow--space-small {
-    --flow-space: 0.75rem
-}
-
-.container {
-    padding-inline: 2em;
-    margin-inline: auto;
-    max-width: 80rem;
 }
 
 .sr-only {
@@ -200,121 +142,26 @@ select {
     border: 0;
 }
 
-.skip-to-content {
-    position: absolute;
-    z-index: 9999;
-    background: hsl(var(--clr-white));
-    color: hsl(var(--clr-dark));
-    padding: .5em 1em;
-    margin-inline: auto;
-    transform: translateY(-100%);
-    transition: transform 250ms ease-in;
-}
-
-.skip-to-content:focus {
-    transform: translateY(0);
-}
-
-/* colors */
-
-.bg-dark {
-    background-color: hsl(var(--clr-dark));
-}
-
-.bg-accent {
-    background-color: hsl(var(--clr-light));
-}
-
-.bg-white {
-    background-color: hsl(var(--clr-white));
-}
-
-.text-dark {
-    color: var(--clr-dark);
-}
-
-.text-accent {
-    color: var(--clr-light);
-}
-
-.text-white {
-    color: var(--clr-white);
-}
-
 /* typography */
 
 .ff-serif {
     font-family: var(--ff-serif);
 }
 
-.ff-sans-normal {
+.ff-sans {
     font-family: var(--ff-sans-normal);
-}
-
-.letter-spacing-1 {
-    letter-spacing: 4.75px;
-}
-
-.letter-spacing-2 {
-    letter-spacing: 2.7px;
-}
-
-.letter-spacing-3 {
-    letter-spacing: 2.35px;
 }
 
 .uppercase {
     text-transform: uppercase;
 }
 
-.fs-900 {
-    font-size: var(--fs-900);
-}
-
-.fs-800 {
-    font-size: var(--fs-800);
-}
-
-.fs-700 {
-    font-size: var(--fs-700);
-}
-
-.fs-600 {
-    font-size: var(--fs-600);
-}
-
-.fs-500 {
-    font-size: var(--fs-500);
-}
-
-.fs-400 {
-    font-size: var(--fs-400);
-}
-
-.fs-300 {
-    font-size: var(--fs-300);
-}
-
-.fs-200 {
-    font-size: var(--fs-200);
-}
-
-
-.fs-900,
-.fs-800,
-.fs-700,
-.fs-600 {
-    line-height: 1.1;
-}
-
-/* ----------------------------------------------------------- */
-/* COMMON COMPONENTS                                           */
-/* ----------------------------------------------------------- */
-
 
 /* ----------------------------------------------------------- */
 /* COMPONENTS                                                  */
 /* ----------------------------------------------------------- */
+
+/* header */
 
 .header-main {
     min-height: 100vh;
@@ -348,6 +195,8 @@ select {
     letter-spacing: 8.75px;
     text-align: center;
     margin-top: 20vh;
+    font-size: (2.5rem, 1.786rem + 1.905vw, 3.5rem);
+    color: var(--clr-white)
 }
 
 .header-main>h1::after {
@@ -367,6 +216,126 @@ select {
 
 @media (min-width: 40rem) {
     .header-main>h1::after {
-        bottom: 40vh;
+        bottom: 43vh;
     }
+}
+
+/* features-section */
+
+.features-section {
+    grid-template-columns: 1fr;
+    background-color: var(--clr-white);
+}
+
+.features-section img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center center;
+}
+
+@media (min-width: 60rem) {
+    .features-section img {
+        height: 100%;
+    }
+
+    .features-section {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .features-section_image-transform {
+        grid-area: 1/2/2/3;
+    }
+
+    .features-section_image-standout {
+        grid-area: 2/1/3/2;
+    }
+}
+
+.features-section_article {
+    margin-block: 4rem;
+    max-width: 447px;
+    width: 90vw;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+}
+
+.features-section_article h2 {
+    font-size: clamp(2rem, 1.9rem + 0.5vw, 2.5rem);
+    font-weight: 900;
+    letter-spacing: -0.285714px;
+    margin-bottom: clamp(1.5rem, 1.4rem + 0.5vw, 2rem);
+}
+
+.features-section_article p {
+    color: var(--clr-grey);
+    font-size: 1.125rem;
+    margin-bottom: clamp(2rem, 1.9rem + 0.5vw, 2.5rem);
+}
+
+.features-section_article a {
+    text-decoration: none;
+    font-size: 0.94rem;
+    color: var(--clr-dark);
+}
+
+.features-section_article a:hover {
+
+}
+
+@media (min-width: 60rem) {
+    .features-section_article{
+        text-align: left;
+        margin-inline: min(6.875rem, 4vw) 2vw;
+        width: auto;
+    }
+
+    .features-section_article:first-of-type{
+        margin-inline: 2vw min(6.875rem, 4vw);
+    }
+}
+
+/* services-section */
+
+.services-section {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+@media (min-width: 60rem){
+    .services-section {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+.services-section_article {
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.services-section_article h2{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: max(24.875rem, 47vh);
+}
+
+.services-section_article p{
+    font-size: 1rem;
+    font-weight: 900;
+    width: 90vw;
+    max-width: 345px;
+    margin: 1.5rem auto 3.75rem;
+}
+
+.services-section_article:first-of-type {
+    color: var(--clr-dark-green);
+    background-image: url(images/desktop/image-graphic-design.jpg);
+}
+
+.services-section_article:nth-of-type(2) {
+    color: var(--clr-greyish-blue);
+    background-image: url(images/desktop/image-photography.jpg);
 }
