--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ select {
 }
 
 .ff-sans {
-    font-family: var(--ff-sans-normal);
+    font-family: var(--ff-sans);
 }
 
 .uppercase {
@@ -212,7 +212,15 @@ select {
     bottom: 30vh;
     left: 0;
     right: 0;
+    animation: bounce 0.65s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
+
+@keyframes bounce {
+    from { transform: translate3d(0, -1rem, 0);     }
+    to   { transform: translate3d(0, 1rem, 0); }
+  }
 
 @media (min-width: 40rem) {
     .header-main>h1::after {
@@ -338,4 +346,111 @@ select {
 .services-section_article:nth-of-type(2) {
     color: var(--clr-greyish-blue);
     background-image: url(images/desktop/image-photography.jpg);
+}
+
+/* clients-section */
+
+.clients-section {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    margin: 4rem auto 6rem;
+    gap: 4rem 0.5rem;
+    max-width: 95vw;
+}
+
+@media (min-width: 60rem) {
+    .clients-section {
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: 10rem auto;
+        width: 69.375rem;
+        max-width: 95vw;        
+        gap: 0 0.5rem;
+    }
+}
+
+.clients-section h2 {
+    text-align: center;
+    font-size: clamp(1rem, 0.95rem + 0.25vw, 1.25rem);
+    letter-spacing: 0.32rem;
+    color: var(--clr-light-grey);
+    margin-bottom: 4rem;
+}
+
+@media (min-width: 60rem) {
+    .clients-section h2{
+        grid-area: 1/1/2/4;
+        margin-bottom: 5rem;
+    }
+}
+
+.clients-section_article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 21rem;
+    margin: 0 auto;
+}
+
+.clients-section_article>img{
+    width: 4.5rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 60rem) {
+    .clients-section_article>img{
+        margin-bottom: 3.5rem;
+    }
+}
+
+.client-review {
+    font-size: 1.125rem;
+    color: var(--clr-dark-grey);
+    line-height: 178%;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 60rem) {
+    .client-review{
+        margin-bottom: 4.25rem;
+    }
+}
+
+.client-name {
+    font-size: 1.125rem;
+    margin-bottom: 0.625rem;
+    color: var(--clr-dark);
+}
+
+.client-position {
+    font-size: 0.875rem;
+    color: var(--clr-light-grey);
+}
+
+/* gallery-section */
+
+.gallery-section {
+    grid-template-columns: 1fr 1fr;
+    background-color: var(--clr-white);
+}
+
+.gallery-section img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center center;
+    aspect-ratio: 1;
+}
+
+@media (min-width: 60rem) {
+    .gallery-section img {
+        height: 100%;
+    }
+
+    .gallery-section {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
